# shared

./: .gitignore  Jenkinsfile  LICENSE.txt  README.txt  build.xml  todo.txt  tt4  tt_ispc
docs/api/: allclasses-frame.html  allclasses-index.html  allclasses-noframe.html  allclasses.html  allpackages-index.html  constant-values.html  deprecated-list.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  overview-frame.html  overview-summary.html  overview-tree.html  package-list  package-search-index.js  search.html  serialized-form.html  tag-search-index.js  type-search-index.js
docs/api/algorithms/: BinaryTreeNode.html  CountingSort.html  DoubleLinkedCircularList.html  DoublyLinkedList.DoublyLinkedNode.html  DoublyLinkedList.html  FixedSizeSortedIntVector.html  FixedSizeSortedVector.html  FixedSizeVector.html  KSelect.MaxNode.html  KSelect.Node.html  KSelect.html  LRUCache.html  MedianOfMediansSelect.html  NAryTreeNode.html  Permutations.html  PermutationsWithAwait.html  QuickSort.html  RandomizedQuickSort.html  RandomizedSelect.html  Rotate.html  SkipList.Node.html  SkipList.html  StackIntLarge.html  StackLongLarge.html  SubsequenceChooser.html  SubsetChooser.html  TreeTraversal.Snapshot.html  TreeTraversal.html  VertexNode.html  VeryLongBitString.html  YFastTrie.html  YFastTrieLong.html  package-frame.html  package-summary.html  package-tree.html
docs/api/algorithms/alignment/: KMP.html  LongestCommonSubsequence.html  StringEditDistance.html  TextJustification.Best.html  TextJustification.BestSoln.html  TextJustification.html  package-frame.html  package-summary.html  package-tree.html
docs/api/algorithms/bipartite/: FibonacciHeapWrapper.html  FlowNetwork.html  GaleShapley.html  Graph.html  GraphUtil.html  GraphWithoutWeights.html  HopcroftKarp.html  HopcroftKarpRT2012.html  Hungarian.html  MaxFlowBipartite.html  MinCostUnbalancedAssignment.Forest.html  MinCostUnbalancedAssignment.LeftNode.html  MinCostUnbalancedAssignment.PathNode.html  MinCostUnbalancedAssignment.RightNode.html  MinCostUnbalancedAssignment.SinkNode.html  MinCostUnbalancedAssignment.SourceNode.html  MinCostUnbalancedAssignment.html  MinHeapForRT2012.html  PathNodes.html  ResidualDigraph.html  ResidualDigraph2.html  StableMarriage.html  XFastTrieWrapper.html  YFastTrieWrapper.html  package-frame.html  package-summary.html  package-tree.html
docs/api/algorithms/cache/: FurthestInFutureEvictionCache.html  LRUCache.html  package-summary.html  package-tree.html
docs/api/algorithms/combPerm/: BinPacking.html  Permutations.html  PermutationsWithAwait.html  SelectKMinSum.html  SubsequenceChooser.html  SubsetChooser.html  package-summary.html  package-tree.html
docs/api/algorithms/compGeometry/: BresenhamsLine.html  LargestDistancePair.PairAndHull.html  LargestDistancePair.html  LinesAndAngles.html  MiscellaneousCurveHelper.html  package-summary.html  package-tree.html
docs/api/algorithms/concurrency/: WaitForGraph.html  package-summary.html  package-tree.html
docs/api/algorithms/connected/: ConnectedValuesGroupFinder.html  ConnectedValuesGroupFinder2.html  IConnectedValuesGroupFinder.html  package-frame.html  package-summary.html  package-tree.html
docs/api/algorithms/correlation/: BruteForce.html  BruteForceDistance.DCOV.html  BruteForceDistance.html  MultivariateDistance.html  UnivariateDistance.DCor.html  UnivariateDistance.DCov.html  UnivariateDistance.html  package-frame.html  package-summary.html  package-tree.html
docs/api/algorithms/dimensionReduction/: CURDecomposition.CDFs.html  CURDecomposition.CUR.html  CURDecomposition.PDFs.html  CURDecomposition.PMFs.html  (+7 more)
docs/api/ctci/: HashTable.html  LinkedList.html  Node.html  package-summary.html  package-tree.html
docs/coverage/jacoco/: index.html  jacoco-sessions.html
docs/miscNotes/: affiliate_graph_networks.txt  expectation_maximization.txt  fft_kde.txt  graphTraversal.txt  kde_convolution.txt  linear_algebra_subspaces.txt  misc_decomposition_notes.txt  netlib.txt  parallel_sorting.txt  sorting_long_strings.txt  sorting_parallel.txt
docs/miscNotes/knapsack/: knapsack_fractional_target.txt  knapsack_max_value_capacity.txt  knapsack_max_value_target.txt  knapsack_min_number_items_capacity.txt  knapsack_min_number_items_target.txt  knapsack_number_of_ordered_sets.txt  knapsack_number_of_ordered_subsequences.txt  knapsack_number_of_sequences_target.txt  knapsack_number_of_sets_target.txt
docs/quality/metrics/: notes.txt
lib/: SMILE_LICENSE.txt
src/main/python/: GMM.py  GMM_test.py  README_venv.txt  copy_of_diffusers_training_example.py  diffusers_training_example.ipynb  diffusers_training_example.py  plot_util.py  tf_dataset_util.py  tf_keras_transfer_learning_multiclass_img.py
src/main/resources/: plot_points_and_polygon.html  shared.mf
src/test/c/algorithms/: CMakeLists.txt  SimISPCMiscTest.c
src/test/c/algorithms/ispc/: CMakeLists.txt  ISPCMiscTest.c  ispc_function.h  ispc_function.ispc
src/test/c/algorithms/simd/: CMakeLists.txt  SIMDMisc.c  SIMDMisc.h
src/test/c/algorithms/vec8prod/: README.txt  notes.txt  parallel_programming_notes.txt  time_log.h
src/test/c/algorithms/vec8prod/gpu/: README.txt
src/test/c/algorithms/vec8prod/gpu_and_other_hw/: README.txt  notes.txt
src/test/c/algorithms/vec8prod/ispc/: CMakeLists.txt  ISPCMiscTest.c  README.txt  ispc_function.h  ispc_function.ispc  notes.txt  tasksys.cpp  time_log_ispc.h
src/test/c/algorithms/vec8prod/multithread/: CMakeLists.txt  SimISPCMiscTest.c  SimISPCMultiThreadMisc.c  SimISPCMultiThreadMisc.h
src/test/c/algorithms/vec8prod/simd/: CMakeLists.txt  SIMDMisc.c  SIMDMisc.h  SIMDMiscTest.c  notes.txt
src/test/resources/: README_miles.txt  miles.properties  scp41_README.txt  scpe1_README.txt
src/test/rust/algorithms/vec8prod/: Cargo.toml  README.txt  create_logfiles.sh  create_logfiles2.sh  notes.txt  todo.txt
src/test/rust/algorithms/vec8prod/src/: lib.rs  main.rs  misc.rs  multithread_func.rs  simd_func.rs
src/test/rust/algorithms/vec8prod/tests/: integration_test.rs  integration_tests.rs  log_tests.rs
(+2174 files in other folders)
